--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
     - development-build
     - release-build
     - mumble-plugin-linux-release
+    - mumble-plugin-linux-debug
 
 jobs:
   build:
