--- a/extensions/src/ACRE2Profiling/CMakeLists.txt
+++ b/extensions/src/ACRE2Profiling/CMakeLists.txt
@@ -5,6 +5,7 @@ option(USE_TRACY "USE_TRACY" OFF)
 set(ACRE_NAME "ACRE2Profiling")
 
 acre_set_linker_options()
+set(CMAKE_CXX_FLAGS "-std=c++17 -fPIC")
 
 file(GLOB SOURCES *.h *.hpp *.c *.cpp)
 
