--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,14 +81,14 @@ jobs:
       run: |
         git submodule update --init
         cd extensions\\vcproj
-        cmake .. -A Win32
+        cmake -D TRACY_ENABLE=ON -D ENABLE_TRACING=ON -D USE_TRACY=ON .. -A Win32
         msbuild ACRE.sln /m '/t:ACRE2Arma\acre;ACRE2Arma\arma2ts;ACRE2\ACRE2Steam;ACRE2\ACRE2Mumble;ACRE2\ACRE2TS;Extras\Wav2B64' /p:Configuration=RelWithDebInfo
     - name: Build Extensions (x64)
       if: matrix.arch == 'x64'
       run: |
         git submodule update --init
         cd extensions\\vcproj64
-        cmake .. -A x64
+        cmake -D TRACY_ENABLE=ON -D ENABLE_TRACING=ON -D USE_TRACY=ON .. -A x64
         msbuild ACRE.sln /m '/t:ACRE2Arma\acre;ACRE2Arma\arma2ts;ACRE2\ACRE2Steam;ACRE2\ACRE2Mumble;ACRE2\ACRE2TS' /p:Configuration=RelWithDebInfo
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
